# benchmarks

./: .gitignore  .oxlintrc.json  Cargo.toml  README.md  eslint.config.js  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/nextjs/: package.json
apps/rari/: index.html  package.json  tsconfig.json  vite.config.ts
nextjs-app/: package.json  pnpm-lock.yaml
rari-app/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
rari-app/src/: App.tsx
results/: buildtimes-2025-07-25.json  buildtimes-2025-10-20.json  buildtimes-2025-12-02.json  buildtimes-2026-01-15.json  buildtimes-2026-01-26.json  buildtimes-2026-02-05.json  buildtimes-2026-03-25.json  buildtimes-2026-03-26.json  buildtimes-2026-05-15.json  buildtimes-2026-05-25.json  latest.json  loadtest-2025-07-25.json  loadtest-2025-10-20.json  loadtest-2025-12-02.json  loadtest-2026-01-15.json  loadtest-2026-01-26.json  loadtest-2026-02-05.json  loadtest-2026-03-25.json  loadtest-2026-03-26.json  loadtest-2026-05-15.json  loadtest-2026-05-25.json  performance-2025-07-25.json  performance-2025-10-20.json  performance-2025-12-02.json  performance-2026-01-15.json  performance-2026-01-26.json  performance-2026-02-05.json  performance-2026-03-25.json  performance-2026-03-26.json  performance-2026-05-15.json  performance-2026-05-25.json
scripts/: build-times.js  load-test.js  performance.js
shared/: package.json  tsconfig.json
shared/content/: demo-article.md
tools/benchmark/: Cargo.toml
tools/benchmark/src/: build_times.rs  load_test.rs  performance.rs  time_utils.rs
(+22 files in other folders)
