[package]
name = "rari-benchmark"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "build-times"
path = "src/build_times.rs"

[[bin]]
name = "load-test"
path = "src/load_test.rs"

[[bin]]
name = "performance"
path = "src/performance.rs"

[dependencies]
tokio = { version = "1.52.3", features = [
  "full",
  "process"
] }
anyhow = "1.0.102"
clap = { version = "4.6.1", features = [ "derive" ] }
colored = "3.1.1"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.150"
reqwest = { version = "0.13.4", features = [ "json" ] }
tabled = "0.21.0"
